examples/test/testpolicy1948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1948
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key35: value18
      key36: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value29
          key22: value14
      podSelector:
        matchLabels:
          key18: value38
          key2: value47
